js-i2b2/cells/CRC/assets/QueryStatus.css
.CRC_QS_view {
    position: absolute;
    background: #FFF;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    border: solid 1px rgba(99, 117, 140, 0.28);
    border-top: none;
    overflow: auto;
    padding: 0.4em;
    border-radius: 0 0 3px 3px;
}

.CRC_QS_view .accordion-button{
    padding: 0.2em;
    color: #212529;
    background: none;
    font-size: 0.45em;
    font-weight: 600;
}

.CRC_QS_view td {
    padding: 0.3em;
}

.CRC_QS_view .accordion-item {
    border: none
}

.CRC_QS_view .accordion-body {
    padding: 0.5em;
}

.CRC_QS_view .accordion-header:hover {
    background-color: #ececec;
}

.CRC_QS_view .computeTime {
    margin-left: 0;
    line-height: 16px;
    margin-bottom: 0.5em;
    margin-top: 0.4em;
}

.CRC_QS_view .queryRunningSpinner {
    height: 1.3em;
    width: 1.3em;
    margin-left: 0.3em;
}

.CRC_QS_view .breakdownStatus {
    color: #00dd00;
}

.CRC_QS_view .breakdownValue {
    color: #0000dd;
}

.CRC_QS_view .breakdownLabel {
    font-weight: 700;
    font-size: 1em;
}

.CRC_QS_view #breakdownDetails {
    padding-left: 0.99em;
    margin-bottom: 0.3em;
}

.CRC_QS_view .breakDownHeader{
    font-size: 1.1em;
}

.CRC_QS_view .breakdownResultList {
    margin-left: 0.6em;
    margin-bottom: 0.5em;
}



#infoQueryStatusText .statusButtons {
    float:right;
    margin-left:10px;
}
#infoQueryStatusText .statusButtons button {
    display: none;
}
#infoQueryStatusText .statusButtons.running .cancel {
    display: block;
}
#infoQueryStatusText .statusButtons.done .report {
    display: block;
}
#infoQueryStatusText .statusButtons.cancelled .cancelled {
    display: block;
}


/* query report container styling (outside of the iframe) */

#queryReportModal .modal-dialog {
    max-width: 90%;
}

#queryReportModal .modal-content {
    height: 90%;
}

#queryReportModal .modal-body {
    overflow: hidden;
    padding: 0;
}

#queryReportModal .modal.fade.show {
    background: rgba(0,0,0,.6);
}

#queryReportModal #queryReportWindow {
    width: 100%;
    height: 100%;
    overflow: scroll;
}

